--- a/legal.html
+++ b/legal.html
@@ -42,7 +42,7 @@
       <h2>Impressum</h2>
       <p>F1 in Schools Team Vicito<br>Roschdohler Weg 11<br>24536 Einfeld<br></p>
       <h2>Kontakt</h2>
-      <p>E-Mail: <a href="mailto:team@vicito.de">team@vicito.de</a></p>
+      <p>E-Mail: <a href="mailto:info@vicito.de">info@vicito.de</a></p>
       <h2>Haftungs&shy;hinweis</h2>
       <p>Unsere Webseite enthält Links zu Inhalten Dritter. Diese verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Es ist jedoch nicht zumutbar, diese Inhalte dauerhaft überwachen zu können. Daher leisten wir keine Gewähr auf die Inhalte Dritter und es ist alleinig der jeweilige Anbieter oder Betreiber dieser Inhalte über eben diese verantwortlich. Sollten rechtsverletzende Inhalte festgestellt werden, werden wir diese unverzüglich entfernen.</p>
       <h2>Urheber&shy;rechts&shy;hinweis</h2>
