--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
   </nav>
   <main>
-    <section>
+    <section id="parallax">
       <h1 class="title">Team Vicito</h1>
       <p class="subtitle">Durch Geschwindigkeit zum Sieg!</p>
       <a href="#about"><img id="scrolling-indicator" src="assets/arrow.svg"></a>
@@ -55,8 +55,15 @@
         wir die vielseitigen Aufgaben als Team selbstständig bewältigen und über einen langen Zeitraum intensiv und
         zielgerichtet zusammenarbeiten werden.
       </p>
-      <!-- <h2>Zeit bis zum Wettbewerb</h2>
-            <p id="countdown"></p> -->
+    </section>
+    <section id="articles">
+      <h2>Artikel</h2>
+      <p>Lesen Sie unsere <a href="articles.html">Artikel</a>, um Einblicke in die Arbeit unseres Teams zu erlangen:</p>
+      <p>- <a href="articles/unsere-erste-saison-ist-jetzt-vorbei.html">Unsere erste Saison ist jetzt vorbei!</a></p> 
+    </section>
+    <!-- <h2>Zeit bis zum Wettbewerb</h2>
+          <p id="countdown"></p> -->
+    <section id="vehicles">
       <h2>Unsere Fahrzeuge</h2>
       <div class="timeline">
         <h3>Prototyp 1</h3>
