--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <section id="articles">
       <h2>Artikel</h2>
       <p>Lesen Sie unsere <a href="articles.html">Artikel</a>, um Einblicke in die Arbeit unseres Teams zu erlangen:</p>
+      <p>- <a href="articles/sponsorennewsletter-mai-2021.html">Sponsorennewsletter Mai 2021!</a></p> 
       <p>- <a href="articles/unsere-erste-saison-ist-jetzt-vorbei.html">Unsere erste Saison ist jetzt vorbei!</a></p> 
     </section>
     <!-- <h2>Zeit bis zum Wettbewerb</h2>
