--- a/articles.html
+++ b/articles.html
@@ -20,7 +20,13 @@
 </head>
 
 <body>
-   <a href="../index.html#articles">&lt; Zurück zur Startseite</a>
-   <p>- <a href="articles/unsere-erste-saison-ist-jetzt-vorbei.html">Unsere erste Saison ist jetzt vorbei!</a></p> 
-  </body>
+  <a href="../index.html#articles">&lt; Zurück zur Startseite</a>
+  <div>
+    <h1>Unsere Artikel</h1>
+  </div>
+  <p>Lesen Sie unsere Artikel, um Einblicke in die Arbeit unseres Teams zu erlangen:</p>
+  <p>- <a href="articles/sponsorennewsletter-mai-2021.html">Sponsorennewsletter Mai 2021!</a></p>
+  <p>- <a href="articles/unsere-erste-saison-ist-jetzt-vorbei.html">Unsere erste Saison ist jetzt vorbei!</a></p>
+</body>
+
 </html>
