Preparation for Project: Overhaul
Add: team-vicito/interactive-model-viewer submodule

Add: RSS-Feed

Remove: Old Media

Change: Vector graphics & markup content

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <html lang="de">
 
 <head>
-  <title>Vicito - Impressum</title>
+  <title>Vicito - Kontakt</title>
   <meta charset="UTF-8">
   <meta name="author" content="David Penkowoj">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,25 +41,25 @@
   </nav>
   <main>
     <section>
-      <h2>Impressum</h2>
-      <h3>Kontakt</h3>
-      <p>F1 in Schools Team Vicito<br>Roschdohler Weg 11<br>24536 Einfeld<br></p>
-      <p>Allgemeine E-Mail: <a href="mailto:info@vicito.de">info@vicito.de</a></p>
-      <p>Weitere Kontaktmöglichkeiten finden Sie auf unserer <a href="contact.html">Kontaktseite</a>.</p>
-      <h3>Haftungs&shy;hinweis</h3>
-      <p>Unsere Webseite enthält Links zu Inhalten Dritter. Diese verlinkten Seiten wurden zum Zeitpunkt der Verlinkung
-        auf mögliche Rechtsverstöße überprüft. Wir leister keine Gewähr auf die Korrekt- sowie Angebrachtheit der
-        Inhalte Dritter und es ist alleinig der jeweilige Anbieter oder Betreiber dieser Inhalte über eben diese
-        verantwortlichnd. Sollten rechtsverletzende Inhalte festgestellt werden, werden wir diese unverzüglich
-        entfernen.</p>
-      <h3>Daten&shy;schutz&shy;hinweis</h3>
-      <p>Diese Webseite verarbeitet und speichert ausschließlich ihre Sprach- und Gestaltungspräferenzen lokal auf ihrem
-        Endgerät. Zur verbesserten Darstellung der Seite können außerdem die Spezifikationen ihres Webbrowsers oder
-        Endgeräts temporär erhoben und verarbeitet werden. Diese Daten werden jedoch sofort nach der Nutzung verworfen
-        und nicht gespeichert.</p>
-      <h3>Urheber&shy;rechts&shy;hinweis</h3>
-      <p>Diese Webseite wurde von <a href="team.html#david">David Penkowoj</a> gestaltet und geschrieben. Es wurde
-        außerdem die quelloffene Bibliothek <a href="https://github.com/mrdoob/three.js/">three.js</a> verwendet.</p>
+      <h2>Kontakt</h2>
+      <h3>Anschrift</h3>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2338.002248874949!2d9.986915700192162!3d54.126887587633355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b24c684d50e233%3A0xaaddca75f9e62dce!2sAlexander-von-Humboldt-Schule!5e0!3m2!1sde!2sde!4v1639996062984!5m2!1sde!2sde"
+        width="700" height="400" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
+      <div class="contact-wrapper">
+        <br>
+        <p>F1 in Schools Team Vicito</p>
+        <p>Roschdohler Weg 11</p>
+        <p>24536 Einfeld</p>
+      </div>
+      <h3>Digitale Kontaktmöglichkeiten</h3>
+      <div class="contact-wrapper">
+        <p>Allgemeine E-Mail: <a href="mailto:info@vicito.de">info@vicito.de</a></p>
+        <p>Sponsorenkontakt E-Mail: <a href="mailto:thore.schuer@vicito.de">thore.schuer@vicito.de</a></p>
+        <p>Produktionskontakt E-Mail: <a href="mailto:jandrik.sachau@vicito.de">jandrik.sachau@vicito.de</a></p>
+      </div>
+      <br>
+      <p>Wir sind auch über soziale Netzwerke zu erreichen! Wir sind auf YouTube, Instagram und TikTok vertreten.</p>
     </section>
   </main>
   <footer>
