--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
   <title>Vicito - Startseite</title>
+  <!-- TODO: Make meta tags -->
   <meta charset="UTF-8">
   <meta name="author" content="David Penkowoj">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,18 +20,22 @@
   <script src="scripts/index.js" defer></script>
 </head>
 
+<!-- TODO: MODEL zu FAHRZEUGE und dann alle prototypen interaktiv listen und ggfs, modelle bieten -->
+
 <body>
   <nav>
     <div class="logo-wrap">
-      <img src="assets/logo.svg" alt="Vicito Logo">
-      <p class="logo-text">Vicito</p>
+      <a href="index.html">
+        <img src="assets/logo.svg" alt="Vicito Logo">
+        <p class="logo-text">VICITO</p>
+      </a>
     </div>
     <div class="link-wrap">
-      <a id="start" href="index.html">Startseite</a>
-      <a href="sponsors.html">Sponsoren</a>
+      <a href="news.html">News</a>
       <a href="team.html">Team</a>
-      <a href="model.html">Modell</a>
-      <a href="legal.html">Impressum</a>
+      <a href="vehicles.html">Fahrzeuge</a>
+      <a href="sponsors.html">Sponsoren</a>
+      <a href="vinique.html">Vinique</a>
     </div>
     <div class="burger">
       <div class="line1"></div>
@@ -43,84 +48,33 @@
       <h1 class="title">Team Vicito</h1>
       <p class="subtitle">Durch Geschwindigkeit zum Sieg!</p>
       <a href="#about"><img id="scrolling-indicator" src="assets/arrow.svg"></a>
-      <img class="vehicle" src="./assets/renders/prototyp3.png" alt="Auto">
+      <img class="vehicle" src="./assets/renders/f.png" alt="Auto">
     </section>
     <section id="about">
       <h2>Über uns</h2>
-      <p>
-        Wir sind das F1 in Schools Team Vicito von der 
-        <a href="https://ahs.neumuenster.de/">Alexander-von-Humboldt-Schule Neumünster</a> und haben uns im März 2020
-        zusammengefunden, um an den Regionalmeisterschaften im Februar 2021 in Elmshorn teilzunehmen. Der 
-        <a href="https://www.f1inschools.de/wettbewerb/">Wettbewerb</a> bietet für uns eine ganz neue Herausforderung, da
-        wir die vielseitigen Aufgaben als Team selbstständig bewältigen und über einen langen Zeitraum intensiv und
-        zielgerichtet zusammenarbeiten werden.
+      <p>Wir sind das Team Vicito! Wir sind ein Team aus insgesamt acht Schülerinnen und Schülern von der
+        Alexander-von-Humboldt-Schule Neumünster und nehmen zum wiederholten Mal an dem Wettbewerb „Formel 1 in der
+        Schule“ teil. Durch einen großen Teamgeist und viel Engagement, haben wir im letzten Jahr einen starken zweiten
+        Platz bei den Regionalmeisterschaften in Elmshorn erzielen können. Der Wettbewerb bietet für uns eine
+        Herausforderung, da wir die vielseitigen Aufgaben als Team selbstständig bewältigen und über einen langen
+        Zeitraum intensiv sowie zielgerichtet zusammenarbeiten. In diesem Jahr gehen wir nun mit dem klaren Ziel der
+        Qualifikation zur Deutschen Meisterschaft in die Saison und sind alle hochmotiviert, dieses Ziel zu erreichen.
       </p>
     </section>
-    <section id="articles">
-      <h2>Artikel</h2>
-      <p>Lesen Sie unsere <a href="articles.html">Artikel</a>, um Einblicke in die Arbeit unseres Teams zu erlangen:</p>
-      <p>- <a href="articles/sponsorennewsletter-mai-2021.html">Sponsorennewsletter Mai 2021!</a></p> 
-      <p>- <a href="articles/unsere-erste-saison-ist-jetzt-vorbei.html">Unsere erste Saison ist jetzt vorbei!</a></p> 
-    </section>
-    <!-- <h2>Zeit bis zum Wettbewerb</h2>
-          <p id="countdown"></p> -->
-    <section id="vehicles">
-      <h2>Unsere Fahrzeuge</h2>
-      <div class="timeline">
-        <h3>Prototyp 1</h3>
-        <p>05.04. – 24.04.2020</p>
-        <img class="mini-render" src="./assets/renders/prototyp1.png" alt="Prototyp 1">
-        <p>
-          Unser Konstrukteur Patrick konstruierte den 1. Prototypen des Teams in Zusammenarbeit mit unserem
-          Entwicklungsingenieur Jarno im April 2019 mit dem CAD-Programm „Solid Edge“. Die wichtigsten Faktoren waren
-          hierbei, das Fahrzeug möglichst aerodynamisch zu gestalten, allerdings ohne die Stabilität zu vernachlässigen.
-          Das Fahrzeug zeichnet sich besonders durch seine hohe Länge und den Frontflügel aus, welcher aus zwei in die
-          Länge gestreckten Flügelsegmenten pro Seite besteht, um die Luft mit möglichst geringem Widerstand über die
-          Vorderreifen zu leiten.
-        </p>
-        <h3>Prototyp 2</h3>
-        <p>02.06. – 19.06.2020</p>
-        <img class="mini-render" src="./assets/renders/prototyp2.png" alt="Prototyp 2">
-        <p>
-          Die Konstruktion des zweiten Prototypen erfolgte im Juni 2020 und stellt eine Revolution zum ersten
-          Prototypen dar. Dies drückt sich dadurch aus, dass der Aufbau des Fahrzeugs, also das Fahrzeugkonzept, ein
-          grundsätzlich anderes ist: Die Begründung dafür liegt in einigen Schwächen des ersten Prototypen, z.B. dem
-          Gewicht, welches bei diesem zu hoch ist. Außerdem konnten wir durch das neue Fahrzeugkonzept die Aerodynamik
-          in vielen Bereichen des Fahrzeugs deutlich verbessern. Der Prototyp zeichnet sich u.a. durch einen
-          zusätzlichen Frontflügel auf der Oberseite des Autos aus, der den Regularien entspricht. Somit hatten wir mehr
-          Möglichkeiten in der Gestaltung des eigentlichen Frontflügels.
-        </p>
-        <h3>Prototyp 2.1</h3>
-        <p>22.08. – 17.09.2020</p>
-        <img class="mini-render" src="./assets/renders/prototyp2.1.png" alt="Prototyp 2.1">
-        <p>
-          Zu Testzwecken im Windkanal und in Vorbereitung auf die Konstruktion des finalen Fahrzeugs haben wir einige
-          Teile des zweiten Prototypen verändert. So wollen wir ermitteln, ob wir Teile des Fahrzeugs in Bezug auf das
-          finale Auto verbessern können. Dies betrifft beispielsweise die Seitenkästen, die wir von Grund auf für
-          Vergleichstests neu konstruiert haben. Zudem experimentieren wir mit der Nutzung von Teflonhülsen, die in die
-          Führungsösen eingesetzt werden. Hierdurch soll die Reibung mit der Führungsschnur, die das Fahrzeug auf der
-          Strecke hält, verringert werden, um die Geschwindigkeit zu steigern.
-        </p>
-        <h3>Finales Fahrzeug</h3>
-        <p>11.10. - 25.10.2020</p>
-        <img class="mini-render" src="./assets/renders/prototyp3.png" alt="Finales Fahrzeug">
-        <p>
-          Bei der Konstruktion des finalen Fahrzeugs haben wir alle Erfahrungen unserer Prototypen miteinfließen
-          lassen, um das Auto möglichst aerodynamisch, aber trotzdem stabil zu gestalten. Hierbei ging es vor allem um
-          Kleinigkeiten, die schlussendlich alle zusammen einen entscheidenden Unterschied im Hinblick auf das
-          Abschneiden beim Wettbewerb machen. Das Fahrzeug mag seinem Vorgänger, dem Prototypen 2.1, zwar relativ
-          ähnlich sehen, jedoch haben wir fast jeden Bereich des Fahrzeugs noch einmal detailliert überarbeitet, um das
-          Auto zu optimieren. Ein besonderes Augenmerk legten wir dabei auf die Front, die wir deutlich verändert haben,
-          um den Luftwiderstand sowohl in diesem Bereich als auch um das gesamte Auto herum zu veringern!
-        </p>
-      </div>
+    <section id="count">
+      <h2>Zeit bis zum Wettbewerb</h2>
+      <p id="countdown">Lade Countdown...</p>
     </section>
   </main>
   <footer>
-    <p><a href="legal.html">Impressum</a></p>
+    <div class="small-print-wrapper">
+      <p><a href="legal.html">Impressum</a></p>
+      <p><a href="contact.html">Kontakt</a></p>
+    </div>
     <div class="social-wrapper">
-      <a href="https://www.youtube.com/channel/UCtvMswxdWggvel8fwr5pG7g/"><img src="assets/social/youtube.png"></a>
-      <a href="https://www.instagram.com/team.vicito/"><img src="assets/social/instagram.png"></a>
+      <a href="https://www.youtube.com/channel/UCtvMswxdWggvel8fwr5pG7g/"><img src="assets/social/youtube.svg"></a>
+      <a href="https://www.instagram.com/team.vicito/"><img src="assets/social/instagram.svg"></a>
+      <a href="https://tiktok.com/"><img src="assets/social/tiktok.svg"></a>
     </div>
   </footer>
 </body>
