--- a/sponsors.html
+++ b/sponsors.html
@@ -22,15 +22,17 @@
 <body>
   <nav>
     <div class="logo-wrap">
-      <img src="assets/logo.svg" alt="Vicito Logo">
-      <p class="logo-text">Vicito</p>
+      <a href="index.html">
+        <img src="assets/logo.svg" alt="Vicito Logo">
+        <p class="logo-text">VICITO</p>
+      </a>
     </div>
     <div class="link-wrap">
-      <a id="start" href="index.html">Startseite</a>
-      <a href="sponsors.html">Sponsoren</a>
+      <a href="news.html">News</a>
       <a href="team.html">Team</a>
-      <a href="model.html">Modell</a>
-      <a href="legal.html">Impressum</a>
+      <a href="vehicles.html">Fahrzeuge</a>
+      <a href="sponsors.html">Sponsoren</a>
+      <a href="vinique.html">Vinique</a>
     </div>
     <div class="burger">
       <div class="line1"></div>
@@ -168,7 +170,8 @@
           <div class="image" style="background-image: url('./assets/sponsors/gisma.png');"></div>
           <div class="card-spacer">
             <div class="about">
-              <p class="name"><a class="sponsor" href="https://www.gisma-connectors.de/">GISMA Steckverbinder GmbH</a></p>
+              <p class="name"><a class="sponsor" href="https://www.gisma-connectors.de/">GISMA Steckverbinder GmbH</a>
+              </p>
               <p class="description rating">★★★</p>
               <p>
                 Die GISMA Steckverbinder GmbH gehört zu den drei Marktführern bei der Herstellung von
@@ -208,10 +211,14 @@
     </section>
   </main>
   <footer>
-    <p><a href="legal.html">Impressum</a></p>
+    <div class="small-print-wrapper">
+      <p><a href="legal.html">Impressum</a></p>
+      <p><a href="contact.html">Kontakt</a></p>
+    </div>
     <div class="social-wrapper">
-      <a href="https://www.youtube.com/channel/UCtvMswxdWggvel8fwr5pG7g/"><img src="assets/social/youtube.png"></a>
-      <a href="https://www.instagram.com/team.vicito/"><img src="assets/social/instagram.png"></a>
+      <a href="https://www.youtube.com/channel/UCtvMswxdWggvel8fwr5pG7g/"><img src="assets/social/youtube.svg"></a>
+      <a href="https://www.instagram.com/team.vicito/"><img src="assets/social/instagram.svg"></a>
+      <a href="https://tiktok.com/"><img src="assets/social/tiktok.svg"></a>
     </div>
   </footer>
 </body>
