Add: Vinique Content

--- a/vinique.html
+++ b/vinique.html
@@ -16,6 +16,7 @@
   <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/card.css">
+  <link rel="stylesheet" href="styles/vinique.css">
   <script src="scripts/index.js" defer></script>
 </head>
 
@@ -40,9 +41,46 @@
       <div class="line3"></div>
     </div>
   </nav>
-  <main class="stretch">
+  <main>
     <section>
       <h2>Einleitung</h2>
+      <p>
+        Es ist besonders, es ist einzigartig, es ist Vinique.
+        Das Wort Vinique setzt sich aus unserem Teamnamen „Vicito“ und dem englischen Wort „unique“, was „einzigartig“ bedeutet, zusammen.
+        Mit Vinique meinen wir die Themen, die uns als Team ausmachen und die wir repräsentieren.
+      </p>
+    </section>
+    <section>
+      <h2>Grundsätze</h2>
+      <div class="principle-wrapper">
+        <div class="principle">
+          <img src="assets/principles/four.svg">
+          <p>respektvoller Umgang</p>
+        </div>
+        <div class="principle">
+          <img src="assets/principles/one.svg">
+          <p>präzise Zielsetzungen</p>
+        </div>
+        <div class="principle">
+          <img src="assets/principles/two.svg">
+          <p>Transparenz</p>
+        </div>
+        <div class="principle">
+          <img src="assets/principles/six.svg">
+          <p>Kommunikation</p>
+        </div>
+        <div class="principle">
+          <img src="assets/principles/three.svg">
+          <p>Loyalität</p>
+        </div>
+        <div class="principle">
+          <img src="assets/principles/five.svg">
+          <p>Stärken Ausnutzen</p>
+        </div>
+      </div>
+    </section>
+    <section>
+      <h2>MINT</h2>
       <p>
         In unserem MINT-Bereich haben wir beschlossen, Schülerinnen und Schüler unserer Schule über den Wettbewerb
         „Formel 1 in der Schule“ zu informieren und zu motivieren, selbst teilzunehmen.
