Add: new sponsors

--- a/sponsors.html
+++ b/sponsors.html
@@ -44,26 +44,7 @@
     <section>
       <h2>Unsere Sponsoren</h2>
       <div class="list">
-        <!-- Finanzsponsoren -->
-        <h3>Finanzsponsoren</h3>
-        <a class="anchor" id="oerlikon"></a>
-        <div class="card">
-          <div class="image" style="background-image: url('./assets/sponsors/oerlikon.gif');"></div>
-          <div class="card-spacer">
-            <div class="about">
-              <p class="name"><a class="sponsor" href="https://www.oerlikon.com/">Oerlikon</a></p>
-              <p class="description rating">★★★★★</p>
-              <p>
-                Der Hightech-Industriekonzern „Oerlikon Neumag“, der eine Zweigniederlassung des Global Players
-                „Oerlikon GmbH & Co. KG“ mit einem Fokus auf Maschinen- und Anlagenbau darstellt, unterstützt uns in
-                diesem Jahr durch eine großzügige finanzielle Zuwendung. Somit konnten wir auch gegen Ende dieser Saison
-                das Projekt ohne finanzielle Sorgen verwirklichen. Wir sind sehr froh, dass wir diesen Konzern als
-                unseren Sponsor gewinnen konnten und schätzen uns sehr glücklich, dass sie trotz der aktuellen
-                Coronalage bereit waren, uns zur Seite zu stehen!
-              </p>
-            </div>
-          </div>
-        </div>
+        <h3>Hauptsponsoren</h3>
         <a class="anchor" id="devk"></a>
         <div class="card">
           <div class="image" style="background-image: url('./assets/sponsors/devk.jpg');"></div>
@@ -97,8 +78,6 @@
             </div>
           </div>
         </div>
-        <!-- Sachsponsoren -->
-        <h3>Sachsponsoren</h3>
         <a class="anchor" id="cimtt"></a>
         <div class="card">
           <div class="image" style="background-image: url('./assets/sponsors/cimtt.png');"></div>
@@ -116,6 +95,39 @@
             </div>
           </div>
         </div>
+        <h3>Finanzsponsoren</h3>
+        <a class="anchor" id="oerlikon"></a>
+        <div class="card">
+          <div class="image" style="background-image: url('./assets/sponsors/oerlikon.gif');"></div>
+          <div class="card-spacer">
+            <div class="about">
+              <p class="name"><a class="sponsor" href="https://www.oerlikon.com/">Oerlikon</a></p>
+              <p class="description rating">★★★★★</p>
+              <p>
+                Der Hightech-Industriekonzern „Oerlikon Neumag“, der eine Zweigniederlassung des Global Players
+                „Oerlikon GmbH &amp; Co. KG“ mit einem Fokus auf Maschinen- und Anlagenbau darstellt, unterstützt uns in
+                diesem Jahr durch eine großzügige finanzielle Zuwendung. Somit konnten wir auch gegen Ende dieser Saison
+                das Projekt ohne finanzielle Sorgen verwirklichen. Wir sind sehr froh, dass wir diesen Konzern als
+                unseren Sponsor gewinnen konnten und schätzen uns sehr glücklich, dass sie trotz der aktuellen
+                Coronalage bereit waren, uns zur Seite zu stehen!
+              </p>
+            </div>
+          </div>
+        </div>
+        <a class="anchor" id="foersterit"></a>
+        <div class="card">
+          <div class="image" style="background-image: url('./assets/sponsors/oerlikon.gif');"></div>
+          <div class="card-spacer">
+            <div class="about">
+              <p class="name"><a class="sponsor" href="https://www.oerlikon.com/">Förster IT</a></p>
+              <p class="description rating">★★★★★</p>
+              <p>
+                foerster
+              </p>
+            </div>
+          </div>
+        </div>
+        <h3>Sachsponsoren</h3>
         <a class="anchor" id="tischlereilenker"></a>
         <div class="card">
           <div class="image" style="background-image: url('./assets/sponsors/tischlereilenker.png');"></div>
@@ -148,23 +160,6 @@
             </div>
           </div>
         </div>
-        <a class="anchor" id="vanini"></a>
-        <div class="card">
-          <div class="image" style="background-image: url('./assets/sponsors/vanini.png');"></div>
-          <div class="card-spacer">
-            <div class="about">
-              <p class="name"><a class="sponsor" href="https://vanini.de/">Vanini</a></p>
-              <p class="description rating">★★★★</p>
-              <p>
-                Die Johs. Vanini & Söhne GmbH & Co. KG ist ein Kieler Familienunternehmen und ein gefragter Partner für
-                die Lackierung von Oberflächen. Aufgrund der positiven Erfahrungen von vorherigen Teams unserer Schule
-                sind wir sehr froh, dieses Unternehmen als unseren Partner bezeichnen zu dürfen. Das Lackieren unserer
-                Fahrzeuge stellt einen wichtigen Teil bei der Gestaltung der Autos dar, weshalb wir Vanini als Sponsor
-                sehr zu schätzen wissen.
-              </p>
-            </div>
-          </div>
-        </div>
         <a class="anchor" id="gisma"></a>
         <div class="card">
           <div class="image" style="background-image: url('./assets/sponsors/gisma.png');"></div>
@@ -183,32 +178,23 @@
             </div>
           </div>
         </div>
-        <a class="anchor" id="studioartphotography"></a>
+        <a class="anchor" id=""></a>
         <div class="card">
-          <div class="image" style="background-image: url('./assets/sponsors/studioartphotography.jpg');"></div>
+          <div class="image" style="background-image: url('./assets/sponsors/gisma.png');"></div>
           <div class="card-spacer">
             <div class="about">
-              <p class="name"><a class="sponsor" href="https://fotografie-studioart.de/">Studioart Photography</a></p>
-              <p class="description rating">★★</p>
+              <p class="name"><a class="sponsor" href="https://www.gisma-connectors.de/">Studio Lichtschmiede</a>
+              </p>
+              <p class="description rating">★★★</p>
               <p>
-                Das Fotostudio Studioart Photography mit Sitz in Kiel wollte uns in dieser Saison mit der
-                professionellen Ablichtung und Nachbearbeitung unserer Teamfotos unterstützen. Jedoch war dies unter
-                Einhaltung der Kontaktbeschränkungen im Zuge der Corona-Pandemie leider nicht möglich. Dennoch möchten
-                wir uns für die Bereitschaft, sich als Sponsor für uns zu engagieren, bedanken!
+                Foto
               </p>
             </div>
           </div>
         </div>
-        <!-- Spender -->
-        <h3>Spender</h3>
-        <div class="image-list">
-          <a class="anchor" id="lindenapotheke"></a>
-          <div class="image"><img src="./assets/sponsors/lindenapotheke.png" alt="Lindenapotheke"></div>
-          <a class="anchor" id="moellerautoteile"></a>
-          <div class="image"><img src="./assets/sponsors/moellerautoteile.jpg" alt="Möller Autoteile"></div>
-        </div>
       </div>
     </section>
+    <!-- Partner: asd -->
   </main>
   <footer>
     <div class="small-print-wrapper">
