Change: Introcuction text

--- a/index.html
+++ b/index.html
@@ -52,13 +52,12 @@
     </section>
     <section id="about">
       <h2>Über uns</h2>
-      <p>Wir sind das Team Vicito! Wir sind ein Team aus insgesamt acht Schülerinnen und Schülern von der
-        Alexander-von-Humboldt-Schule Neumünster und nehmen zum wiederholten Mal an dem Wettbewerb „Formel 1 in der
-        Schule“ teil. Durch einen großen Teamgeist und viel Engagement, haben wir im letzten Jahr einen starken zweiten
-        Platz bei den Regionalmeisterschaften in Elmshorn erzielen können. Der Wettbewerb bietet für uns eine
-        Herausforderung, da wir die vielseitigen Aufgaben als Team selbstständig bewältigen und über einen langen
-        Zeitraum intensiv sowie zielgerichtet zusammenarbeiten. In diesem Jahr gehen wir nun mit dem klaren Ziel der
-        Qualifikation zur Deutschen Meisterschaft in die Saison und sind alle hochmotiviert, dieses Ziel zu erreichen.
+      <p>
+        Wir sind das Team Vicito!
+        Wir bestehen aus insgesamt acht Schülerinnen und Schülern der <a href="https://ahs.neumuenster.de">Alexander-von-Humboldt-Schule Neumünster</a> und nehmen als Team zum zweiten Mal am <a href="https://www.f1inschools.de">Wettbewerb</a> „Formel 1 in der Schule“ teil.
+        Durch einen großen Teamgeist und viel Engagement haben wir im letzten Jahr einen starken zweiten Platz bei den Regionalmeisterschaften in Elmshorn erzielen können.
+        Der Wettbewerb bietet für uns eine Herausforderung, da wir die vielseitigen Aufgaben als Team selbstständig bewältigen und über einen langen Zeitraum intensiv sowie zielgerichtet zusammenarbeiten.
+        In diesem Jahr gehen wir nun mit dem klaren Ziel der Qualifikation zur Deutschen Meisterschaft in die Saison und sind alle hochmotiviert, dieses Ziel zu erreichen.
       </p>
     </section>
     <section id="count">
