Add: new vehicle layout

--- a/vehicles.html
+++ b/vehicles.html
@@ -43,25 +43,138 @@
       <div class="line3"></div>
     </div>
   </nav>
-  <main class="stretch">
+  <main>
     <section>
-      <h2>Unsere Fahrzeuge</h2>
+      <h2>Unser Fuhrpark</h2>
     </section>
     <section id="list">
-      <h3>Filter</h3>
       <div class="filter-wrapper">
-        <input class="filter" type="checkbox" data-label="Zwischenprototypen">
-        <input class="filter" type="checkbox" data-label="Hauptprototypen">
-        <input class="filter" type="checkbox" data-label="Namen">
+        <input class="filter" type="checkbox" data-label="Hauptmodelle">
+        <input class="filter" type="checkbox" data-label="Untermodelle" checked="false">
+        <input class="filter" type="checkbox" data-label="Räder" checked="false">
+        <input class="filter" type="checkbox" data-label="Spitznamen" checked="false">
       </div>
-      <!-- TODO: dynamisches anpassen der div container für interaktives lesen -->
-      <h3>Liste der Fahrzeuge</h3>
+      <!-- TODO: dynamisches anpassen der div container für interaktives lesen
       <div class="vehicle">
         <img src="assets/renders/f.png">
         <div class="info">
           <p class="name">Finales Fahrzeug</p>
           <p class="actions"><a href="#">Technische Genauigkeiten</a><a href="model.html?v=f">3D-Modell</a></p>
           <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quis expedita ullam excepturi? Officia expedita odio facilis veritatis ipsa ratione.</p>
+        </div>
+      </div>
+      -->
+      <div class="vehicle">
+        <img src="assets/renders/p1.png">
+        <div class="info">
+          <p class="name">Prototyp I</p>
+          <p class="description">Fertiggestellt am 10.04.2021</p>
+        </div>
+      </div>
+      <div class="vehicle">
+        <img src="assets/renders/p1.1.png">
+        <div class="info">
+          <p class="name">Prototyp I.I</p>
+          <p class="description">Fertiggestellt am 10.04.2021</p>
+        </div>
+      </div>
+      <div class="vehicle">
+        <img src="assets/renders/p1.2.png">
+        <div class="info">
+          <p class="name">Prototyp I.II</p>
+          <p class="description">Fertiggestellt am 11.04.2021</p>
+        </div>
+      </div>
+      <div class="vehicle">
+        <img src="assets/renders/p2.png">
+        <div class="info">
+          <p class="name">Prototyp II</p>
+          <p class="description">Fertiggestellt am 15.05.2021</p>
+        </div>
+      </div>
+      <div class="vehicle">
+        <img src="assets/renders/p2.1.png">
+        <div class="info">
+          <p class="name">Prototyp II.I</p>
+          <p class="description">Fertiggestellt am 15.05.2021</p>
+        </div>
+      </div>
+      <div class="vehicle">
+        <img src="assets/renders/p2.2.png">
+        <div class="info">
+          <p class="name">Prototyp II.II</p>
+          <p class="description">Fertiggestellt am 25.06.2021</p>
+        </div>
+      </div>
+      <div class="vehicle">
+        <img src="assets/renders/p2.3.png">
+        <div class="info">
+          <p class="name">Prototyp II.III</p>
+          <p class="description">Fertiggestellt am 06.07.2021</p>
+        </div>
+      </div>
+      <div class="vehicle">
+        <img src="assets/renders/p2.4.png">
+        <div class="info">
+          <p class="name">Prototyp II.IV</p>
+          <p class="description">Fertiggestellt am 08.07.2021</p>
+        </div>
+      </div>
+      <div class="vehicle">
+        <img src="assets/renders/p2.5.png">
+        <div class="info">
+          <p class="name">Prototyp II.V</p>
+          <p class="description">Fertiggestellt am 24.07.2021</p>
+        </div>
+      </div>
+      <div class="vehicle">
+        <img src="assets/renders/p3.png">
+        <div class="info">
+          <p class="name">Prototyp III</p>
+          <p class="description">Fertiggestellt am 25.06.2021</p>
+        </div>
+      </div>
+      <div class="vehicle">
+        <img src="assets/renders/p4.png">
+        <div class="info">
+          <p class="name">Prototyp IV</p>
+          <p class="description">Fertiggestellt am 06.07.2021</p>
+        </div>
+      </div>
+      <div class="wheel">
+        <img src="assets/renders/w1.png">
+        <div class="info">
+          <p class="name">Rad I</p>
+        </div>
+      </div>
+      <div class="wheel">
+        <img src="assets/renders/w2.png">
+        <div class="info">
+          <p class="name">Rad II</p>
+        </div>
+      </div>
+      <div class="wheel">
+        <img src="assets/renders/w3.png">
+        <div class="info">
+          <p class="name">Rad III</p>
+        </div>
+      </div>
+      <div class="wheel">
+        <img src="assets/renders/w4.png">
+        <div class="info">
+          <p class="name">Rad IV</p>
+        </div>
+      </div>
+      <div class="wheel">
+        <img src="assets/renders/w5.png">
+        <div class="info">
+          <p class="name">Rad V</p>
+        </div>
+      </div>
+      <div class="wheel">
+        <img src="assets/renders/wf.png">
+        <div class="info">
+          <p class="name">Finales Rad</p>
         </div>
       </div>
     </section>
